--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>"Привет"</title>
-    
+    <link>"https://www.google.com/search"<link>
 </head>
 <body>
 
